metadata/objects/CIO_Dashboard_Data__c.object
<CustomObject>
    <description>Included in the App Cloud Harbor Cruise package.</description>
    <fields>
        <fullName>CIO_Adoption__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adoption</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIO_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIO_Developer_Skill_Name__c</fullName>
        <label>Developer Skill Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIO_IT_Timesheet_Name__c</fullName>
        <displayFormat>II-{00000}</displayFormat>
        <label>IT Timesheet Name</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>CIO_Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>Field Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIO_Sprint__c</fullName>
        <label>Sprint</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sprint 1</fullName>
                </value>
                <value>
                    <fullName>Sprint 2</fullName>
                </value>
                <value>
                    <fullName>Sprint 3</fullName>
                </value>
                <value>
                    <fullName>Sprint 4</fullName>
                </value>
                <value>
                    <fullName>Sprint 5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIO_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Backlog</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIO_Total_Staff__c</fullName>
        <label>Total Staff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIO_Trailhead_Badge__c</fullName>
        <label>Trailhead Badge</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>App Customization</fullName>
                </value>
                <value>
                    <fullName>Apex Triggers</fullName>
                </value>
                <value>
                    <fullName>Apex Basics</fullName>
                </value>
                <value>
                    <fullName>Application Lifecycle Management</fullName>
                </value>
                <value>
                    <fullName>Change Management</fullName>
                </value>
                <value>
                    <fullName>Data Management</fullName>
                </value>
                <value>
                    <fullName>Data Modelling</fullName>
                </value>
                <value>
                    <fullName>Data Security</fullName>
                </value>
                <value>
                    <fullName>Event Monitoring</fullName>
                </value>
                <value>
                    <fullName>HTML5 &amp; Hybrid</fullName>
                </value>
                <value>
                    <fullName>Lightning App Builder</fullName>
                </value>
                <value>
                    <fullName>Lightning Components</fullName>
                </value>
                <value>
                    <fullName>Lightning Connect</fullName>
                </value>
                <value>
                    <fullName>Lightning Design System</fullName>
                </value>
                <value>
                    <fullName>Native Android</fullName>
                </value>
                <value>
                    <fullName>Native iOS</fullName>
                </value>
                <value>
                    <fullName>Process Automation</fullName>
                </value>
                <value>
                    <fullName>UI Customization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIO_User_Story_Name__c</fullName>
        <label>User Story Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIO_work_type__c</fullName>
        <label>Work Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Projects</fullName>
                </value>
                <value>
                    <fullName>Keeping the Lights On</fullName>
                </value>
                <value>
                    <fullName>Innovation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CIO Dashboard Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CIO_Adoption__c</columns>
        <columns>CIO_Role__c</columns>
        <columns>CIO_Completed__c</columns>
        <columns>CIO_Developer_Skill_Name__c</columns>
        <columns>CIO_work_type__c</columns>
        <columns>CIO_IT_Timesheet_Name__c</columns>
        <columns>CIO_Sprint__c</columns>
        <columns>CIO_Status__c</columns>
        <columns>CIO_Total_Staff__c</columns>
        <columns>CIO_Trailhead_Badge__c</columns>
        <columns>CIO_User_Story_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Adoption Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CIO Dashboard Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>